Wacom Intuos used in BT mode leads to system unresponsive to any input
Summary
Using Plasma wayland, connecting the graphical tablet in BT mode leads to a system unresponsive to all inputs (mouse, keyboard). Even Magic SysRq keys are not working.
The crash does not occur when the tablet in connected via USB.
The crash only occurs with kernel>=6.3.3.
The system stays responsive: plasma notifications are still popping up,and I’m able to ssh to the computer to restart it.
Steps to reproduce
- Connect a Wacom Intuos M tablet in bluetooth mode
- Use it for a few seconds
- System gets unresponsive to any input
Required information
- libinput version: 1.23.0
- kernel version: 6.3.4-arch1-1
- hardware information:
P: /devices/pci0000:00/0000:00:14.0/usb1/1-14/1-14:1.0/bluetooth/hci0/hci0:256/0005:056A:0379.0007/input/input22/event22
M: event22
R: 22
U: input
D: c 13:86
N: input/event22
L: 0
E: DEVPATH=/devices/pci0000:00/0000:00:14.0/usb1/1-14/1-14:1.0/bluetooth/hci0/hci0:256/0005:056A:0379.0007/input/input22/event22
E: SUBSYSTEM=input
E: DEVNAME=/dev/input/event22
E: MAJOR=13
E: MINOR=86
E: USEC_INITIALIZED=1421527915
E: ID_INPUT=1
E: ID_INPUT_TABLET=1
E: ID_INPUT_WIDTH_MM=216
E: ID_INPUT_HEIGHT_MM=135
E: ID_BUS=bluetooth
E: LIBINPUT_DEVICE_GROUP=5/56a/379:4c:03:4f:54:28:8c
-
libinput record
output: wacom.yml -
libinput debug-events --verbose
output: libinput.log - when the crash occurs, one single line appears in
journalctl -f
:
may 27 18:20:54 jetmir kwin_wayland[880]: kwin_libinput: Libinput: WARNING: log rate limit exceeded (5 msgs per 3600000ms). Discarding future messages.
- when the crash occurs, both
libinput debug-events
andkwin_wayland
jump to 100% CPU usage. I must stoplibinput debug
via SIGTERM andkwin_wayland
via SIGKILL to recover. - crash seems to also happen on Gnome: Archlinux forum